--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 
 <body>
-<h2>belajar git bersama rifqi cwan</h2>
+<h2>You like A MONSTERRR</h2>
+  <footer>
+    <p>Copy right arka 2024</p>
+  </footer>
 </body>
 
 </html>
