--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h2>You like A MONSTERRR</h2>
+<h2>You like A MONSTERRR mother faker</h2>
   <footer>
     <p>Copy right arka 2024</p>
   </footer>
